# DATA-ENGINEER-LEARNING-JOURNEY

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
00-documentation/: 1-terminologi.txt  README.md  REORGANIZATION-SUMMARY.md
01-learning-modules/: README.md
01-learning-modules/01-data-serialization/: pyproject.toml
01-learning-modules/01-data-serialization/1-teori-dasar/: 1-teori-dasar.md  1-test_avro.py  2-avro-batch-airflow.md  2-avro-inmemory-serialize.py  3-airflow-batch-etl-example.py  4-extensible-schema-registry.py  README.md  trade_schema.avsc  trade_schema_v2.avsc
01-learning-modules/02-data-testing/: README.md  pytest.ini
01-learning-modules/02-data-testing/1-basic-testing/: 1-why-testing.md  2-first-test.py  3-test-data-transformation.py
01-learning-modules/02-data-testing/2-pytest-fundamentals/: 0-exercise-pytest.py  1-intro-pytest.md  2-test-with-fixtures.py  3-parametrize-tests.py  4-test-exceptions.py
01-learning-modules/02-data-testing/3-data-validation/: 1-schema-validation.md  2-simple-validation.py  3-pydantic-intro.py  4-advanced-pydantic.py
01-learning-modules/02-data-testing/3-data-validation/schemas/: user_schema_v1.avsc  user_schema_v2.avsc
01-learning-modules/02-data-testing/4-quality-checks/: 0-pandera-exercise.py  1-data-quality-concepts.md  2-manual-checks.py  3-pandera-intro.py  4-pandera-advanced.py
01-learning-modules/02-data-testing/5-testing-pipelines/: 1-integration-testing-concepts.md  2-mocking-basics.py  2-mocking-basics.py.backup  3-test-etl-pipeline.py  3-test-etl-pipeline.py.backup  4-error-handling-retry.py  4-error-handling-retry.py.backup  5-real-world-crypto-etl.py  5-real-world-crypto-etl.py.backup  6-e2e-testing.py  INDUSTRY_LIBRARIES.md  README.md
01-learning-modules/03-api-integration/: README.md
01-learning-modules/04-cloud-services/: README.md
01-learning-modules/05-pipeline-architecture/: README.md
01-learning-modules/06-performance-optimization/: README.md
01-learning-modules/07-devops-infrastructure/: README.md
01-learning-modules/08-python-patterns/: README.md
01-learning-modules/08-python-patterns/1-type-safety/: 2-pydantic-models.py
01-learning-modules/09-security-compliance/: README.md
02-projects/: README.md
02-projects/archived/old-project-broken/: docker-compose.yml
02-projects/etl-projects/02-gold-silver-price/src/: validate.py
02-projects/realtime-projects/01-crypto-dashboard/: README.md  docker-compose.yaml  pyproject.toml
02-projects/realtime-projects/01-crypto-dashboard/avro_schema/: producer_schema_v1.avsc
02-projects/realtime-projects/01-crypto-dashboard/config/: settings.yml
02-projects/realtime-projects/01-crypto-dashboard/consumer-spark/: spark-consume.py  utils.py
02-projects/realtime-projects/01-crypto-dashboard/producer/: crypto-price-producer.py  models.py
02-projects/realtime-projects/03-sales-analytics-spark-v2/: .gitgnore  README.md  RealTimeSalesAnalytics.py  create-topic.bash  mock_sales_producer.py  pyproject.toml  utils.py
03-tools-and-setup/: README.md
03-tools-and-setup/technology-stack/02-airflow-orchestration/: README.md
03-tools-and-setup/technology-stack/02-airflow-orchestration/airflow/: docker-compose.yaml  pyproject.toml
03-tools-and-setup/technology-stack/02-airflow-orchestration/airflow/dags/: demo_hello.py  dynamic_dag.py  etl_demo.py  etl_xcom.py  resilient_dag.py  test_variable_connection.py  testing_variable.py
03-tools-and-setup/technology-stack/03-cloud-deployment/: bq_create_table.py  bq_insert.py  bq_query.py  download_gcs.py  list_gcs.py  pyproject.toml  upload_gcs.py
03-tools-and-setup/technology-stack/03-cloud-deployment/exercise_airflow_cloud/: docker-compose.yaml  pyproject.toml
03-tools-and-setup/technology-stack/03-cloud-deployment/exercise_airflow_cloud/dags/: cloud_etl_full_dag.py  gcs_load_to_bq_dag.py  gcs_upload_dag.py
03-tools-and-setup/technology-stack/03-cloud-deployment/exercise_airflow_cloud/src/: bq_validate.py  gcs_upload.py
03-tools-and-setup/technology-stack/04-dbt-transformations/: README.md  pyproject.toml
03-tools-and-setup/technology-stack/04-dbt-transformations/learning_path/phase_0/: phase_0_guide.md
03-tools-and-setup/technology-stack/04-dbt-transformations/postgre_dbt/: dbt_project.yml
03-tools-and-setup/technology-stack/04-dbt-transformations/weatherflow_dbt/: dbt_project.yml
03-tools-and-setup/technology-stack/04-dbt-transformations/weatherflow_dbt/macros/: rename_columns.sql
03-tools-and-setup/technology-stack/04-dbt-transformations/weatherflow_dbt/macros/custom/: test_humidity_range.sql
03-tools-and-setup/technology-stack/04-dbt-transformations/weatherflow_dbt/models/marts/: dim_city.sql  fact_weather_daily.sql
03-tools-and-setup/technology-stack/04-dbt-transformations/weatherflow_dbt/models/staging/: schema.yml  stg_weather.sql  stg_weather_jinja.sql
03-tools-and-setup/technology-stack/05-kafka-streaming/: day_1_mental_model.md  day_2_setup_kafka_docker.md  day_3_kafka_producer.md  day_4_kafka_consumer.md
03-tools-and-setup/technology-stack/05-kafka-streaming/kafka_tutorial/: Dockerfile  consumer_confluent.py  consumer_to_postgres.py  crypto_schema.sql  db.py  docker-compose.yml  models.py  producer_confluent.py  producer_streaming.py  pyproject.toml  queries.py
03-tools-and-setup/technology-stack/06-spark-processing/: README.md
03-tools-and-setup/technology-stack/07-aws-data-engineering/: README.md
03-tools-and-setup/technology-stack/08-terraform/: .gitignore
03-tools-and-setup/technology-stack/09-scraping-playwright/: pyproject.toml
03-tools-and-setup/technology-stack/09-scraping-playwright/01-basics/: README.md  main.py
(+437 files in other folders)
