[tool.poetry]
name = "data-engineer-workspace"
version = "0.1.0"
description = "Shared development dependencies for the DATA-ENGINEER workspace"
authors = ["sanju3291 <sanju329121@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "<3.0"
numpy = "<2.0"
pandera = "0.18.0"
pydantic = "^2.0.0"
faker = "^22.0.0"
pytest = "^8.0.0"
typeguard = "^4.4.0"
multimethod = "<2.0.0"
requests = "^2.31.0"
# Industry-standard libraries untuk testing & ETL
sqlalchemy = "^2.0.0"
httpx = "^0.27.0"
responses = "^0.25.0"
tenacity = "^9.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pytest-asyncio = "^0.24.0"
pytest-httpx = "^0.34.0"
redis = "^5.2.0"
boto3 = "^1.42.42"
google-cloud = "^0.34.0"
botocore = "^1.42.42"
pyarrow = "^23.0.0"
fastparquet = "^2025.12.0"

[tool.poetry.group.dev.dependencies]
# add lint/format tools here if needed

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
