[project]
name = "data-serialization-contracts"
version = "0.1.0"
description = ""
authors = [
    {name = "Sanz3291",email = "sanju329121@gmail.com"}
]
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "fastavro (>=1.12.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
