[project]
name = "dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Sanz3291",email = "sanju329121@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.3"
dependencies = [
    "dbt-bigquery (>=1.10.3,<2.0.0)",
    "dbt-core (>=1.11.2,<2.0.0)",
    "dbt-postgres (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
