[project]
name = "scraping-playwright-basics"
version = "0.1.0"
description = "Executable cheatsheet Playwright async"
authors = [
    {name = "Sanz3291",email = "sanju329121@gmail.com"}
]
readme = "01-basics/README.md"
requires-python = "^3.11"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
